Reportes y gestion general del proyecto

--- a/Api_TrabajoFidelitas/Api_TrabajoFidelitas/CorreoElec.html
+++ b/Api_TrabajoFidelitas/Api_TrabajoFidelitas/CorreoElec.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Confirmación de Reserva</title>
+    <title> de Reserva</title>
     <link href="/Estilos/assets/css/Correo.css" rel="stylesheet">
 </head>
 <body>
@@ -29,7 +29,7 @@
                                 <div style="border: 1px solid hsl(var(--border)); border-radius: 0.5rem; padding: 1.5rem; display: flex; flex-direction: column; justify-content: space-between; gap: 1rem;">
                                     <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100%;">
                                         <div>
-                                            <h2 style="font-size: 1.5rem; line-height: 2rem; font-weight: 700; text-align: center">Cita confirmada</h2>
+                                            <h2 style="font-size: 1.5rem; line-height: 2rem; font-weight: 700; text-align: center">@@Tipo de reserva</h2>
                                             <p style="color: hsl(var(--muted-foreground)); text-align: center;">Gracias por reservar una cita con nosotros.</p>
                                         </div>
                                     </div>
